got my buttons to render

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Great Dunkers</title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous">
   </script>
-  
+
   <script src="assets/javascript/logic.js"></script>
 	
 </body>
